# Traceratops

./: .gitignore  CMakeLists.txt  LICENSE  README.md  make_animation.sh
assets/cornell_box/: CornellBox-Empty.mtl
assets/quad/: quad.mtl
src/: aabb.h  basic_renderer.cpp  basic_renderer.h  bvh.cpp  bvh.h  camera.h  debug_renderer.cpp  debug_renderer.h  geometry.c  geometry.cpp  geometry.h  image.c  image.cpp  image.h  main.c  main.cpp  material.cpp  material.h  parallel_renderer.cpp  parallel_renderer.h  renderer.h  rendering.c  rendering.cpp  rendering.h  scene.c  scene.cpp  scene.h  texture.cpp  texture.h  timer.h  tracemath.h  traceratops_math.h  triangle.h  triangle_mesh.h
